SERVER-61469 Fix coverity warning